syntax = "proto3";

package brand;

import "common/Paging.proto";
import "common/PagingCondition.proto";

option java_multiple_files = true;
option java_package = "jp.inaba.grpc.brand";

service SearchBrands {
  rpc handle (SearchBrandsRequest) returns (SearchBrandsResponse);
}

message SearchBrandsRequest {
  string likeBrandName = 1;
  common.PagingCondition pagingCondition = 2;
}

message SearchBrandsResponse {
  repeated Summary items = 1;
  common.Paging paging = 2;
}

message Summary {
  string id = 1;
  string name = 2;
}
